harness/test/errors/078_anon_anaphor_scope.eu
# Mistake: using '_' inside a function call argument where its scope does not extend
double(x): x * 2
result: [1, 2, 3] map(double(_))
